# dialog-api-key

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
dialog_api_key/: plugin.py
tests/: test_plugin.py
